add tests and refactor more processors to use new adapters