@@ -2,6 +2,7 @@ package org.opencds.cqf.fhir.utility.adapter.r4;
 
 import ca.uhn.fhir.context.FhirVersionEnum;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.hl7.fhir.instance.model.api.IBase;
 import org.hl7.fhir.instance.model.api.IBaseDatatype;
 import org.hl7.fhir.r4.model.QuestionnaireResponse.QuestionnaireResponseItemAnswerComponent;
@@ -63,6 +64,6 @@ public class QuestionnaireResponseItemAnswerComponentAdapter extends BaseAdapter
         answer.setItem(items.stream()
                 .map(IAdapter::get)
                 .map(QuestionnaireResponseItemComponent.class::cast)
-                .toList());
+                .collect(Collectors.toList()));
     }
 }
