@@ -3,8 +3,10 @@ package org.opencds.cqf.fhir.utility.adapter.r5;
 import ca.uhn.fhir.context.FhirContext;
 import ca.uhn.fhir.context.FhirVersionEnum;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.hl7.fhir.instance.model.api.IBase;
 import org.hl7.fhir.instance.model.api.IBaseCoding;
+import org.hl7.fhir.r5.model.Coding;
 import org.hl7.fhir.r5.model.DataType;
 import org.hl7.fhir.r5.model.Questionnaire.QuestionnaireItemComponent;
 import org.hl7.fhir.r5.model.Questionnaire.QuestionnaireItemInitialComponent;
@@ -13,6 +15,7 @@ import org.hl7.fhir.r5.model.QuestionnaireResponse.QuestionnaireResponseItemComp
 import org.opencds.cqf.cql.engine.model.ModelResolver;
 import org.opencds.cqf.fhir.utility.adapter.BaseAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IAdapter;
+import org.opencds.cqf.fhir.utility.adapter.ICodingAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IItemComponentAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IQuestionnaireItemComponentAdapter;
 import org.opencds.cqf.fhir.utility.adapter.IQuestionnaireResponseItemComponentAdapter;
@@ -51,28 +54,20 @@ public class QuestionnaireItemComponentAdapter extends BaseAdapter implements IQ
     }
 
     @Override
-    public List<IBaseCoding> getCode() {
-        return item.getCode().stream().map(IBaseCoding.class::cast).toList();
-    }
-
-    @Override
-    public String getType() {
-        return item.getType().toCode();
-    }
-
-    @Override
-    public boolean isGroupItem() {
-        return item.getType().equals(QuestionnaireItemType.GROUP);
-    }
-
-    @Override
-    public boolean getRepeats() {
-        return item.getRepeats();
+    public IQuestionnaireItemComponentAdapter setLinkId(String linkId) {
+        get().setLinkId(linkId);
+        return this;
     }
 
     @Override
     public boolean hasDefinition() {
         return item.hasDefinition();
+    }
+
+    @Override
+    public IQuestionnaireItemComponentAdapter setDefinition(String definition) {
+        item.setDefinition(definition);
+        return this;
     }
 
     @Override
@@ -97,7 +92,7 @@ public class QuestionnaireItemComponentAdapter extends BaseAdapter implements IQ
         item.setItem(items.stream()
                 .map(IAdapter::get)
                 .map(QuestionnaireItemComponent.class::cast)
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     @Override
@@ -106,11 +101,75 @@ public class QuestionnaireItemComponentAdapter extends BaseAdapter implements IQ
     }
 
     @Override
-    public void addItems(List<IItemComponentAdapter> items) {
+    public void addItems(List<IQuestionnaireItemComponentAdapter> items) {
         items.stream()
                 .map(IAdapter::get)
                 .map(QuestionnaireItemComponent.class::cast)
                 .forEach(this.item::addItem);
+    }
+
+    @Override
+    public List<IBaseCoding> getCode() {
+        return item.getCode().stream().map(IBaseCoding.class::cast).toList();
+    }
+
+    @Override
+    public String getText() {
+        return item.getText();
+    }
+
+    @Override
+    public IQuestionnaireItemComponentAdapter setText(String text) {
+        item.setText(text);
+        return this;
+    }
+
+    @Override
+    public String getType() {
+        return item.getType().toCode();
+    }
+
+    @Override
+    public IQuestionnaireItemComponentAdapter setType(String type) {
+        item.setType(QuestionnaireItemType.fromCode(type));
+        return this;
+    }
+
+    @Override
+    public boolean isGroupItem() {
+        return item.getType().equals(QuestionnaireItemType.GROUP);
+    }
+
+    @Override
+    public boolean isChoiceItem() {
+        return item.getType().equals(QuestionnaireItemType.QUESTION);
+    }
+
+    @Override
+    public boolean getRequired() {
+        return item.getRequired();
+    }
+
+    @Override
+    public IQuestionnaireItemComponentAdapter setRequired(boolean required) {
+        get().setRequired(required);
+        return this;
+    }
+
+    @Override
+    public boolean getRepeats() {
+        return item.getRepeats();
+    }
+
+    @Override
+    public IQuestionnaireItemComponentAdapter setRepeats(boolean repeats) {
+        get().setRepeats(repeats);
+        return this;
+    }
+
+    @Override
+    public void addAnswerOption(ICodingAdapter option) {
+        get().addAnswerOption().setValue((Coding) option.get());
     }
 
     @Override
